tests/errors/overflow.moss
fn main[alloc]() {
  println(uint_to_string(5000000000));
#                        ^^^^^^^^^^ integer too large
}
